Refactor Index.html with updated structure and content
Updated the HTML structure and content, including styles and scripts.

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <title>ZERO INDEX | Shreyansh Gupta</title>
     <!-- Google Fonts for a futuristic look -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- --- START OF CSS (Move to style.css if hosting separately) --- -->
     <style>
         /* --- CSS STYLES --- */
         :root {
@@ -452,6 +454,7 @@
             .event::before { left: 0; transform: none; top: 50%; left: -15px; }
         }
     </style>
+    <!-- --- END OF CSS --- -->
 </head>
 <body>
 
@@ -482,7 +485,7 @@
             <div class="hero-image">
                 <div class="image-wrapper">
                     <!-- Updated Book Cover Image from Google Drive -->
-                    <img src="https://drive.google.com/uc?export=download&id=1ujty10aggydcaDZGd1vgIuvi-39TK7wz" alt="Zero Index Book Cover">
+                    <img src="https://github.com/ShreyanshGupta205/Zero-Index-Book/blob/main/Zero%20Index.png?raw=true" alt="Zero Index Book Cover">
                 </div>
             </div>
         </div>
@@ -557,6 +560,7 @@
         </div>
     </footer>
 
+    <!-- --- START OF JAVASCRIPT (Move to script.js if hosting separately) --- -->
     <script>
         // Typing Effect
         const textElement = document.getElementById('typing-text');
@@ -610,5 +614,6 @@
             setInterval(updateTimer, 100);
         };
     </script>
+    <!-- --- END OF JAVASCRIPT --- -->
 </body>
 </html>
